--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "sequelize": "^3.12.2",
+    "sequelize": ">=4.44.4",
     "mysql": "^2.9.0",
     "request": "^2.65.0",
     "underscore": "^1.8.3",
